# gumloop-mcp

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml
examples/clients/conformance-auth-client/: pyproject.toml
examples/clients/simple-auth-client/: pyproject.toml
examples/clients/simple-chatbot/: pyproject.toml
examples/clients/simple-task-client/: pyproject.toml
examples/clients/simple-task-interactive-client/: pyproject.toml
examples/clients/sse-polling-client/: pyproject.toml
examples/servers/everything-server/: pyproject.toml
examples/servers/simple-auth/: pyproject.toml
examples/servers/simple-pagination/: pyproject.toml
examples/servers/simple-prompt/: pyproject.toml
examples/servers/simple-resource/: pyproject.toml
examples/servers/simple-streamablehttp/: pyproject.toml
examples/servers/simple-streamablehttp-stateless/: pyproject.toml
examples/servers/simple-task/: pyproject.toml
examples/servers/simple-task-interactive/: pyproject.toml
examples/servers/simple-tool/: pyproject.toml
examples/servers/sse-polling-demo/: pyproject.toml
examples/servers/structured-output-lowlevel/: pyproject.toml
examples/snippets/: pyproject.toml
src/mcp/: __init__.py  types.py
src/mcp/cli/: cli.py
src/mcp/client/: session.py  sse.py  streamable_http.py
src/mcp/server/: __main__.py
src/mcp/server/fastmcp/: __init__.py
src/mcp/server/lowlevel/: server.py
src/mcp/shared/: exceptions.py  logging_utils.py
tests/: test_examples.py
tests/server/: test_lowlevel_output_validation.py
tests/server/lowlevel/: test_aggregate_results.py  test_auth_error.py  test_external_client.py  test_tool_deprecation.py  test_tool_restrictions.py
tests/shared/: test_logging_utils.py
